syntax = "proto3";

package proto;
option go_package = "./proto";

import "common.proto";

message ProgramID { string ID = 1; }

message ProgramSource {
  string language = 1;
  string sourceCode = 2;
}

message CreateProgramRequest {
  string sourceCode = 1;
  DialogID dialogID = 2;
  MessageID messageID = 3;
}

message ProgramOutput {
  string stdout = 1;
  string stderr = 2;
}

message Program {
  ProgramID programID = 1;
  string language = 2;
  string sourceCode = 3;
  ProgramOutput codeRunnerOutput = 4;
  ProgramOutput linterOutput = 5;
}

message UpdateProgramSourceRequest {
  ProgramID programID = 1;
  ProgramSource programSource = 2;
}

service Sandbox {
  rpc GetProgramByID(ProgramID) returns (Program) {}
  rpc CreateProgram(CreateProgramRequest) returns (ProgramID) {}
  rpc UpdateProgramSource(UpdateProgramSourceRequest) returns (Void) {}
  rpc RunProgram(ProgramID) returns (Void) {}
  rpc LintProgram(ProgramID) returns (Void) {}
  rpc Ping(Void) returns (Pong) {}
}
